--- a/settings.ini
+++ b/settings.ini
@@ -1,45 +1,39 @@
 [DEFAULT]
-# All sections below are required unless otherwise specified.
-# See https://github.com/AnswerDotAI/nbdev/blob/main/settings.ini for examples.
-
-### Python library ###
 repo = l402-python
 lib_name = l402
-version = 0.0.1
+version = 0.1.0
 min_python = 3.7
 license = apache2
 black_formatting = False
-
-### nbdev ###
 doc_path = _docs
 lib_path = l402
 nbs_path = nbs
 recursive = True
 tst_flags = notest
 put_version_in_init = True
-
-### Docs ###
 branch = main
 custom_sidebar = False
-doc_host = https://%(user)s.github.io
-doc_baseurl = /%(repo)s
-git_url = https://github.com/%(user)s/%(repo)s
-title = %(lib_name)s
-
-### PyPI ###
+doc_host = https://Fewsats.github.io
+doc_baseurl = /l402-python
+git_url = https://github.com/Fewsats/l402-python
+title = l402
 audience = Developers
 author = 
 author_email = 
-copyright = 2025 onwards, %(author)s
+copyright = 2025 onwards, 
 description = Payments for AI agents using L402 protocol
 keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = Fewsats
-
-### Optional ###
 requirements = fastcore fastlite
 dev_requirements = claudette fastapi uvicorn
-# console_scripts =
-# conda_user = 
-# package_data =
+readme_nb = index.ipynb
+allowed_metadata_keys = 
+allowed_cell_metadata_keys = 
+jupyter_hooks = False
+clean_ids = True
+clear_all = False
+cell_number = True
+skip_procs = 
+
