--- a/settings.ini
+++ b/settings.ini
@@ -26,8 +26,8 @@ keywords = nbdev jupyter notebook python
 language = English
 status = 3
 user = Fewsats
-requirements = fastcore fastlite
-dev_requirements = claudette fastapi uvicorn
+requirements = fastcore fastlite cdp-sdk
+dev_requirements = claudette fastapi uvicorn 
 readme_nb = index.ipynb
 allowed_metadata_keys = 
 allowed_cell_metadata_keys = 
